Clean up build artifacts from git tracking
- Remove bin/, obj/, and MSBuild artifacts from repository
- Enhance .gitignore for comprehensive .NET exclusions
- Keep files locally but stop tracking in git per sound practices

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@
 **/*.user
 **/*.suo
 **/*.cache
+
+# .NET Core and MSBuild
+*.deps.json
+*.runtimeconfig.json
+*.runtimeconfig.dev.json
+
+# Visual Studio
+.vs/
+*.userprefs
