--- a/pidgeon/tests/Pidgeon.Core.Tests/Pidgeon.Core.Tests.csproj
+++ b/pidgeon/tests/Pidgeon.Core.Tests/Pidgeon.Core.Tests.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
   </ItemGroup>
 
   <ItemGroup>
