Complete distribution infrastructure with self-contained executables
- Configure .NET self-contained publishing for Windows/macOS/Linux
- Add GitHub Actions CI/CD pipeline for automated releases
- Create cross-platform build script with checksum generation
- Document comprehensive distribution strategy
- Transform from developer-only tool to professional platform
- Enable zero-dependency installation and user acquisition

--- a/pidgeon/src/Pidgeon.CLI/Pidgeon.CLI.csproj
+++ b/pidgeon/src/Pidgeon.CLI/Pidgeon.CLI.csproj
@@ -5,6 +5,29 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
+    <!-- Self-contained publishing configuration -->
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <PublishTrimmed>false</PublishTrimmed>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    
+    <!-- Trimming configuration for future optimization -->
+    <TrimMode>partial</TrimMode>
+    <SuppressTrimAnalysisWarnings>true</SuppressTrimAnalysisWarnings>
+    
+    <!-- Supported runtime identifiers for distribution -->
+    <RuntimeIdentifiers>win-x64;osx-x64;osx-arm64;linux-x64;linux-arm64</RuntimeIdentifiers>
+    
+    <!-- Assembly metadata for distribution -->
+    <AssemblyTitle>Pidgeon Healthcare Platform CLI</AssemblyTitle>
+    <AssemblyDescription>Healthcare data generation, validation, and testing platform</AssemblyDescription>
+    <AssemblyCompany>Pidgeon Health</AssemblyCompany>
+    <AssemblyProduct>Pidgeon CLI</AssemblyProduct>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <InformationalVersion>1.0.0</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
