--- a/pidgeon_gui/package.json
+++ b/pidgeon_gui/package.json
@@ -29,6 +29,7 @@
     "electron-builder": "^26.0.12",
     "electron-store": "^10.1.0",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "onnxruntime-node": "^1.22.0-rev",
     "openai": "^5.20.2",
