Fix embedded resource loading for realistic demographic data
- Fix LogicalName pattern in Pidgeon.Data.csproj to use dots instead of backslashes
- DemographicsDataService now successfully loads embedded resources
- Generation produces realistic names instead of 'Unknown^Unknown'
- All 1090 embedded resources now accessible at runtime
- No external file dependencies for demographic data generation

Resolves LEDGER-037: Critical embedded resource loading bug

--- a/pidgeon/src/Pidgeon.Data/Pidgeon.Data.csproj
+++ b/pidgeon/src/Pidgeon.Data/Pidgeon.Data.csproj
@@ -13,14 +13,14 @@
   <!-- Embed data files as resources for binary distribution -->
   <ItemGroup>
     <EmbeddedResource Include="standards\**\*.json">
-      <LogicalName>data.standards.%(RecursiveDir)%(Filename)%(Extension)</LogicalName>
+      <LogicalName>data.standards.$([System.String]::Copy('%(RecursiveDir)').Replace('\', '.'))%(Filename)%(Extension)</LogicalName>
     </EmbeddedResource>
     <EmbeddedResource Include="standards\**\*.md">
-      <LogicalName>data.standards.%(RecursiveDir)%(Filename)%(Extension)</LogicalName>
+      <LogicalName>data.standards.$([System.String]::Copy('%(RecursiveDir)').Replace('\', '.'))%(Filename)%(Extension)</LogicalName>
     </EmbeddedResource>
 
     <EmbeddedResource Include="interop\**\*">
-      <LogicalName>data.interop.%(RecursiveDir)%(Filename)%(Extension)</LogicalName>
+      <LogicalName>data.interop.$([System.String]::Copy('%(RecursiveDir)').Replace('\', '.'))%(Filename)%(Extension)</LogicalName>
     </EmbeddedResource>
 
     <EmbeddedResource Include="schema.sql">
